...
                        <TextView
                            android:id="@+id/unit"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="left|center"
                            android:text="mmol/L"
                            android:textColor="#FFFFFF"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:padding="5dp">
                        <!--go to AddFoodItemActivity, functions like the FAB button-->
                        <ImageButton
                            android:id="@+id/button_monitor_plan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:layout_toLeftOf="@+id/button_log_indicator"
                            android:background="@android:color/transparent"
                            android:padding="10dp"
...
